--- a/css/main.css
+++ b/css/main.css
@@ -1,92 +1,82 @@
 /* Tu CSS va aqui */
 
 .logo{
-	margin-left: 10px;
-	margin-top: 10px;
-
+	width: 200px;
+	margin-top: 20px;
+	margin-left: 140px;
 }
-.menu{
-	text-decoration: none;
-	list-style: none;
+ul{
+	padding-left: 90px;
 }
 li{
+	list-style: none;
 	display: inline-block;
-	margin-left: 100px;
 	margin-top: 40px;
-	font-family:italic;
 	color:#808080;
+	font-size: 12px;
+	padding-left: 60px;
 }
 .background{
-background-color: #808080;
-max-width: 100%;
-margin-top: 20px;
+	background-color:#808080;
+	max-width: 100%;
+	margin-top: 15px;
+	padding: 50px 0px;
 }
-.blanco{
+h1{
+	font-family: "open+sans";
 	color: white;
-	font-size: 40px;
-	margin-left: 40px;
-	
+	font-size: 35px;
+	margin-left: 90px;
 }
-.alo{
-	margin-bottom: 80px;
+
+.dos{
+	margin-top: 15px;
 }
-.uno{
-	margin-top: 70px;
+.tres{
+	margin-top: 15px;
 }
-.lorem{
-color: white;	
-margin-left: 40px;
-margin-top: 70px;
+p{
+	color:white;
+	font-size: 10px;
+	margin-left: 90px;
+
 }
-.cuadro{
-	width: 320px;
-	height: 170px;
-	background-color: #9A9A9A;
+.cuatro{
+	margin-top: 20px;
+
+}
+.formulario{
+	width: 200px;
+	height: 130px;
+	background-color:#9A9A9A;
 	border-radius: 5px;
-	margin-top: 50px;
-	margin-left: 30px;
-	margin-bottom: 30px;
+
+	margin: 20px 130px;
 }
-.get{
+.cinco{
+	font-family: "open+sans";
 	color: white;
-	padding-top: 10px;
-	margin-left: 100px;
-}
-.atributo{
-	width: 300px;
-	height: 30px;
-	background-color: white;
-	margin-top: 10px;
-	margin-left: 80px;
-	padding-left: 10px;
-
-}
-
-.azul{
-	background-color: #3EB0F7;
-	color:white;
-}
-
-.suscribe{
-	margin-left: 110px;
-	padding-top: 5px;
-	color:white;
-	background-color: #3EB0F7;
-}
-.all{
-	font-size: 12px;
-	color:#808080;
+	font-size: 15px;
 	margin-left: 50px;
 	padding-top: 10px;
 }
-.atributo{
-	margin-left: 10px;
-	padding-top: 5px;
-	color:#808080;
+.formularios{
+	margin-left: 12px;
+	margin-top: 5px;
 }
-@media (max-width: 535px) {
-	[ class*= "col-"]
-{
-	width: 100%;
-	}
+.boton{
+	background-color:#3EB0F7;
+	margin-left: 12px;
+    margin-top: 5px;
+    padding: 4px 54px 1px 58px;
+    align-content: center;
+    color: white;
+}
+.all{
+	font-size:11px;
+	color: #808080;
+	margin:10px;
+	margin-left: 200px;
+	font-family: Arial;
+
 }
